--- a/view/Home.view.xml
+++ b/view/Home.view.xml
@@ -4,7 +4,7 @@
     xmlns:mvc="sap.ui.core.mvc">
     <Page title="{i18n>homePageTitle}" class="sapUiResponsiveContentPadding">
         <content>
-            <Button text="{i18n>iWantToNavigate}" class="sapUiTinyMarginEnd" />
+            <Button id="displayNotFoundBtn" text="{i18n>DisplayNotFound}" class="sapUiTinyMarginEnd" press="onDisplayNotFound" />
         </content>
     </Page>
 </mvc:View>
