--- a/view/Home.view.xml
+++ b/view/Home.view.xml
@@ -1,11 +1,11 @@
 <mvc:View
-    controllerName="sap.ui.demo.nav.controller.Home"
-    xmlns="sap.m"
-    xmlns:mvc="sap.ui.core.mvc">
-    <Page title="{i18n>homePageTitle}" class="sapUiResponsiveContentPadding">
-        <content>
-            <Button id="displayNotFoundBtn" text="{i18n>DisplayNotFound}" class="sapUiTinyMarginEnd" press="onDisplayNotFound" />
-            <Button id="employeeListBtn" text= "{i18n>ShowEmployeeList}" class="sapUiTinyMarginEnd" press="onNavToEmployees" />        
-        </content>
-    </Page>
+	controllerName="sap.ui.demo.nav.controller.Home"
+	xmlns="sap.m"
+	xmlns:mvc="sap.ui.core.mvc">
+	<Page title="{i18n>homePageTitle}" class="sapUiResponsiveContentPadding">
+		<content>
+			<Button id="displayNotFoundBtn" text="{i18n>DisplayNotFound}" press="onDisplayNotFound" class="sapUiTinyMarginEnd"/>
+			<Button id="employeeListBtn" text="{i18n>ShowEmployeeList}" press="onNavToEmployees" class="sapUiTinyMarginEnd"/>
+		</content>
+	</Page>
 </mvc:View>
