--- a/view/NotFound.view.xml
+++ b/view/NotFound.view.xml
@@ -1,12 +1,11 @@
 <mvc:View
-xmlns= "sap.m"
-xmlns:mvc= "sap.ui.core.mvc"
-controllerName= "sap.ui.demo.nav.controller.NotFound">
-    <MessagePage 
-        title="{i18n>NotFound}"
-        text="{i18n>NotFound.text}"
-        description="{i18n>NotFound.description}"
-        showNavButton="true"
-        navButtonPress="onNavBack"
-    />
+	controllerName="sap.ui.demo.nav.controller.NotFound"
+	xmlns="sap.m"
+	xmlns:mvc="sap.ui.core.mvc">
+	<MessagePage
+		title="{i18n>NotFound}"
+		text="{i18n>NotFound.text}"
+		description="{i18n>NotFound.description}"
+		showNavButton="true"
+		navButtonPress="onNavBack"/>
 </mvc:View>
